--- a/trunk/experimental/grub_boot2py/Makefile
+++ b/trunk/experimental/grub_boot2py/Makefile
@@ -44,10 +44,14 @@ OBJS =	\
 	$(LIB_OBJS) \
 	$(MACH_OBJS)
 
-all: KERNEL.BIN
+all: c.img
 
 clean:
 	-rm -f *.o KERNEL.BIN kernel.lst Objects/*.o Python/*.o Modules/*.o lib/*.o mach/*.o
+
+clobber:
+	-rm -f *.o KERNEL.BIN kernel.lst Objects/*.o Python/*.o Modules/*.o lib/*.o mach/*.o
+	-rm -f bochsout.txt c.img grub.img *~ Object/*~ Python/*~ Modules/*~ lib/*~ mach/*~
 
 .asm.o:
 	$(NASM) -o $@ $<
@@ -55,8 +59,11 @@ clean:
 .c.o:
 	$(CC) -c -I./Include -o $@ $<
 
+c.img: KERNEL.BIN
+	MTOOLSRC=mtools.conf mtools -c mcopy -o $< C:
+
 KERNEL.BIN: kstart.o Modules/python.o $(OBJS) $(LDSCRIPT) 
-	$(LD) -o $@ kstart.o Modules/python.o $(OBJS)
+	$(LD) -Map kernel.map -o $@ kstart.o Modules/python.o $(OBJS)
 	nm $@ | sort > kernel.lst
 	strip $@
 
