--- a/trunk/experimental/echo/Makefile
+++ b/trunk/experimental/echo/Makefile
@@ -30,7 +30,8 @@ OBJECT_OBJS =	\
 		python/Objects/abstract.o \
 		python/Objects/classobject.o \
 		python/Objects/funcobject.o \
-		python/Objects/boolobject.o
+		python/Objects/boolobject.o \
+		python/Objects/listobject.o
 
 PYTHON_OBJS =	\
 		python/Python/pythonrun.o \
