Expose the textmode framebuffer as a builtin buffer 1/ keyboard.py needs to be refrozen (I don't have a 2.3 handy) 2/ bufferobject.c isn't slimmed down as nicely as James does

--- a/experimental/echo/Makefile
+++ b/experimental/echo/Makefile
@@ -31,7 +31,8 @@ OBJECT_OBJS =	\
 		python/Objects/classobject.o \
 		python/Objects/funcobject.o \
 		python/Objects/boolobject.o \
-		python/Objects/listobject.o
+		python/Objects/listobject.o \
+		python/Objects/bufferobject.o
 
 PYTHON_OBJS =	\
 		python/Python/pythonrun.o \
