added no-strict-aliasing flag to GCC - Python code needs it

--- a/experimental/necco/Makefile
+++ b/experimental/necco/Makefile
@@ -1,6 +1,6 @@
 .SUFFIXES:	.boa
 
-CC       = gcc -Wall -O2 -nostdinc -fno-builtin
+CC       = gcc -Wall -O2 -nostdinc -fno-builtin -fno-strict-aliasing
 #CC      += -fno-leading-underscore
 #CC	+= -DVERBOSE_MALLOC -DVERBOSE_MEMCPY -DVERBOSE_MARSHAL
 LD       = ld -nostdlib
